# agenthook

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  INSTALL.md  README.md  docker-compose.yml  pyproject.toml
agenthook/: __init__.py  admin_api.py  admin_auth.py  admin_sessions.py  admin_users.py  api_models.py  approval.py  auth.py  chat.py  cli.py  config.py  daemon.py  engine_auth.py  engine_login.py  errors.py  git_ops.py  github_app.py  instances.py  mailer.py  models.py  paths.py  plugins.py  ratelimit.py  results.py  runner.py  scheduler.py  secrets.py  serde.py  server.py  shell.py  store.py  templating.py  tui.py  verify.py  worker.py
agenthook/channels/: __init__.py  base.py  slack.py
agenthook/docker/: Dockerfile
agenthook/egress/: Dockerfile  __init__.py  broker.py  config_names.py
agenthook/engines/: __init__.py  aider.py  base.py  claude.py  codex.py  gemini.py
deploy/: Caddyfile.example  Dockerfile.control-plane  agenthook.service  go-live.md  nginx.conf.example  upgrade.sh
design-system/: README.md  agenthook-tui-design.html  agenthook-tui-variations.html  design-brief.md  terminal.css  variation-screens.js
docs/: infisical-alternatives-prompt.md  native-secrets-plan.md  product-plan.md  security-and-secrets.md  self-hosting.md  workspace-integration-plan.md
examples/: agenthook.yaml
tests/: conftest.py  test_admin_api.py  test_admin_jwt.py  test_admin_users.py  test_auth_templating_errors.py  test_egress.py  test_email_recovery.py  test_engine_login.py  test_engines.py  test_github_app.py  test_hardening.py  test_isolation.py  test_multirepo.py  test_runner_dryrun.py  test_secrets.py  test_server.py  test_store.py  test_ui_login.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AppShell.tsx  Brand.tsx  CodeEditor.tsx  CommandPalette.tsx  ConfirmDialog.tsx  PageHeader.tsx  (+2 more)
(+28 files in other folders)
