[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthook"
version = "1.3.1"
description = "Self-hosted CLI to run agentic coding CLIs headlessly via webhooks inside Docker containers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Daniel Barcelos" }]
keywords = ["claude", "codex", "gemini", "aider", "agent", "webhook", "automation", "ci"]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "cryptography>=41",
    "pyyaml>=6",
    "jinja2>=3",
    "croniter>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
agenthook = "agenthook.cli:app"

# Plugin extension points (see DESIGN.md §26). Built-in implementations are
# registered here; third parties ship packages that add their own entries.
[project.entry-points."agenthook.engines"]
claude = "agenthook.engines.claude:ClaudeEngine"
codex = "agenthook.engines.codex:CodexEngine"
gemini = "agenthook.engines.gemini:GeminiEngine"
aider = "agenthook.engines.aider:AiderEngine"

[project.entry-points."agenthook.channels"]
slack = "agenthook.channels.slack:SlackChannel"

[project.entry-points."agenthook.secrets_backends"]
local-encrypted = "agenthook.secrets:LocalEncryptedBackend"
env = "agenthook.secrets:EnvBackend"

[tool.hatch.build.targets.wheel]
packages = ["agenthook"]
# The web panel build (produced by web/ into agenthook/static/panel) is a build
# artifact, gitignored but shipped in the wheel so `agenthook serve` can serve
# it at /ui without a separate build step for end users.
artifacts = ["agenthook/static/panel/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
